--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 services:
-  database:
+  accounts-api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    depends_on:
+      - accounts-db
+
+  accounts-db:
     image: mysql:lts
     restart: always
     environment:
@@ -7,8 +16,3 @@ services:
       MYSQL_DATABASE: mydatabase
     ports:
       - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
-
-volumes:
-  mysql_data:
